Fixed Authorization header; Updated swagger
